<resources>
    <string name="app_name">Read-i</string>
    <string name="facebook_application_id" translatable="false">read-i</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbread-i</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="menu_home">Home</string>
    <string name="menu_prepare">Prepare</string>
    <string name="menu_evacuate">Evacuate</string>
    <string name="menu_refuges">Refuges</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_language">Language</string>
    <string name="alert_btn_evacuate">Evacuate</string>
    <string name="alert_btn_moreInfo">More info</string>
    <string name="alert_btn_share">Share</string>
    <string name="desc_read_i_logo">Read-i logo and name</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="sign_in_error">Failed : %1$s</string>
    <string name="prepare_menu_hurricane_button">Prepare menu Hurricane button</string>
    <string name="prepare_menu_extreme_heat_button">Prepare menu Extreme Heat button</string>
    <string name="prepare_menu_flood_button">Prepare menu Flood button</string>
    <string name="prepare_menu_fire_button">Prepare menu Fire button</string>
    <string name="prepare_menu_earthquake_button">Prepare menu Earthquake button</string>
    <string name="prepare_menu_tsunami_button">Prepare menu Tsunami button</string>
    <string name="prepare_menu_volcanic_eruption_button">Prepare menu Volcanic Eruption button</string>
    <string name="prepare_menu_avalanche_button">Prepare menu Avalanche button</string>
    <string name="more_info_btn">Plus d\'informations</string>
    <string name="hurr_title">Cyclones</string>
    <string name="hurr_def_title">Qu\'est-ce que c\'est?</string>
    <string name="hurr_def">"Les cyclones tropicaux sont des systèmes massifs des tempêtes qui se
        forment au-dessus des eaux chaudes des océans et se dirigent vers les terres. Les menaces
        potentielles des cyclones tropicaux (aussi nommés ouragans ou typhons) sont des vents
        puissatns, de fortes pluies, des ondes de tempêtes, des inondations côtières et à
        l'intérieur du pays, un flot de retours, des tornades et des éboulements. La saison des
        cyclones tropicaux d'Atlantique commence le 1er juin et finit le 30 novembre " (Ready, s.d.).
    </string>
    <string name="hurr_bef_section_title">Avant : Se préparer</string>
    <string name="hurr_bef_cl1_title">Avant une alerte : </string>
    <string name="hurr_bef_cl1_adv1">Préparer un sac de survie.</string>
    <string name="hurr_bef_cl1_adv2">Faire régulièrement le plein de la voiture.</string>
    <string name="hurr_bef_cl1_adv3">Etablir un plan d\'évacuation avec votre famille et un plan de
        communication en cas de coupure de courant.</string>
    <string name="hurr_bef_cl2_title">Quand vous avez reçu une alerte</string>
    <string name="hurr_bef_cl2_adv1">Suivre régulièrement les informations (application, météo,
        journal, etc.). N\'écouter que les sources officielles.</string>
    <string name="hurr_bef_cl2_adv2">Refaire le stock de votre sac de survie s\'il vous manque des
        choses et vous remémorer votre plan d\'évacuation.</string>
    <string name="hurr_bef_cl2_adv3">Evacuer rapidement si cela a été demandé.</string>
    <string name="hurr_bef_cl2_adv4">Si l\'évacuation n\'est pas nécessaire, rentrer toutes les
        affaires à l\'intérieur de la maison et protéger les fenêtres.</string>
    <string name="hurr_bef_cl2_adv5">Charger votre téléphone avant une panne de courant éventuelle.
    </string>
    <string name="hurr_bef_cl2_adv6">Rester à l\intérieur. Faire savoir à votre famille et vos amis
        ou vous êtes.</string>
    <string name="hurr_whl_section_title">Pendant : Se protéger</string>
    <string name="hurr_whl_adv1">Utiliser vos bras pour protéger votre tête et votre cou et une
        couverture pour protéger votre corps.</string>
    <string name="hurr_whl_adv2">Ne pas marcher, nager ou rouler dans l\'eau.</string>
    <string name="hurr_whl_adv3">Ne pas marcher sur des ponts au-dessus de courants d\'eau.</string>
    <string name="hurr_whl_adv4">Ne pas essayer d\'aller plus vite qu\'une tornade ou un cyclone.
    </string>
    <string name="hurr_whl_adv5">Si possible, continuer à suivre les informations.</string>
    <string name="hurr_aft_section_title">Après : Rester en sécurité et se rétablir</string>
    <string name="hurr_aft_adv1">Continuer à suivre les informations.</string>
    <string name="hurr_aft_adv2">Ne pas entrer dans un batiment non sécurisé.</string>
    <string name="hurr_aft_adv3">Vous protéger pendant le processus de nettoyage.</string>
    <string name="hurr_aft_adv4">Ne pas toucher les équipements électriques.</string>
    <string name="hurr_aft_adv5">N\'appeler que les services de secours. Contacter les autres
        personnes par SMS ou internet.</string>
    <string name="hurr_aft_adv6">Prendre des photos des dégats.</string>
    <string name="hurr_info_website">https://www.ready.gov/hurricanes</string>
    <string name="heat_title">Vagues de chaleur</string>
    <string name="heat_def_title">Qu\'est-ce que c\'est?</string>
    <string name="heat_def">Les vagues de chaleur sont caractérisées comme étant de longues périodes
        (2 à 3 jours minimum) d\'humidité et de hautes températures (au-dessus des 32° Celsius). Si,
        en plus, il ne pleut pas suffisamment pendant une longue période de temps, cela peut
        engendrer des sécheresses.
    </string>
    <string name="heat_bef_section_title">Avant : Se préparer</string>
    <string name="heat_bef_cl1_title">Avant une alerte : </string>
    <string name="heat_bef_cl1_adv1">Préparer un sac de survie. Toujours avoir de l\'eau en
        suffisance.</string>
    <string name="heat_bef_cl2_title">Quand vous avez reçu une alerte</string>
    <string name="heat_bef_cl2_adv1">Suivre régulièrement les informations (application, météo,
        journal, etc.). N\'écouter que les sources officielles.</string>
    <string name="heat_bef_cl2_adv2">Refaire le stock de votre sac de survie s\'il vous manque des
        choses et vous remémorer votre plan d\'évacuation.</string>
    <string name="heat_bef_cl2_adv3">Prendre régulièrement des nouvelles des membres de votre
        famille, de vos proches, de vos voisins et des personnes de votre entourage ayant des
        problèmes de santé.</string>
    <string name="heat_whl_section_title">Pendant : Se protéger</string>
    <string name="heat_whl_adv1">Si interdit, respecter les ordres sur l\'utilisation de l\'eau.</string>
    <string name="heat_whl_adv2">Trouver des endroits avec de l\'air conditionné (pas des
        ventilateurs, ils sont conducteurs de problèmes de santé liés à la chaleur).</string>
    <string name="heat_whl_adv3">Rester hydraté. Eviter les activités intenses. Porter des vêtements
        légers et se protéger (crème solaire, casquette).</string>
    <string name="heat_whl_adv4">Faire attention aux maladies liées à la chaleur (vérifier aussi les
        voisins, amis, membres de la famille et surtout les personnes agées et à mobilité réduite).
    </string>
    <string name="heat_whl_adv5">Ne jamais laisser enfants ou animaux dans une voiture fermée.</string>
    <string name="heat_whl_adv6">Garder la maison fraiche, par exemple en couvrant les fenêtres avec
        des draps.</string>
    <string name="heat_info_website">https://www.ready.gov/heat</string>
    <string name="flood_title">Inondations</string>
    <string name="flood_def_title">Qu\'est-ce que c\'est?</string>
    <string name="flood_def">Les inondations peuvent faire leur apparition suite à de la pluie, de la
        neige, des tempêtes, des débordements de digues ou d\'autres systèmes hydrauliques.
    </string>
    <string name="flood_bef_section_title">Avant : Se préparer</string>
    <string name="flood_bef_cl1_title">Avant une alerte : </string>
    <string name="flood_bef_cl1_adv1">Préparer un sac de survie et acheter de l\'eau en suffisance.
    </string>
    <string name="flood_bef_cl1_adv2">Faire régulièrement le plein de la voiture.</string>
    <string name="flood_bef_cl1_adv3">Etablir un plan d\'évacuation avec votre famille et un plan de
        communication en cas de coupure de courant.</string>
    <string name="flood_bef_cl2_title">Quand vous avez reçu une alerte</string>
    <string name="flood_bef_cl2_adv1">Suivre régulièrement les informations (application, météo,
        journal, etc.). N\'écouter que les sources officielles.</string>
    <string name="flood_bef_cl2_adv2">Refaire le stock de votre sac de survie s\'il vous manque des
        choses et vous remémorer votre plan d\'évacuation.</string>
    <string name="flood_bef_cl2_adv3">Evacuer rapidement si cela a été demandé. Se déplacer vers des
        terrains surélevés. Ne jamais rouler là où il y a des barricades.</string>
    <string name="flood_bef_cl2_adv4">Charger votre téléphone avant une panne de courant éventuelle.
    </string>
    <string name="flood_bef_cl2_adv5">Rester à l\intérieur. Faire savoir à votre famille et vos amis
        ou vous êtes.</string>
    <string name="flood_whl_section_title">Pendant : Se protéger</string>
    <string name="flood_whl_adv1">Si la voiture est coincée dans un courant d\'eau, restez à
        l\'intérieur. Si l\'eau rentre dans la voiture, se mettre sur le toit de la voiture.</string>
    <string name="flood_whl_adv2">Si vous êtes coincés dans un bâtiment, aller à l\'étage le plus
        haut (pas un grenier fermé). Si nécessaire, monter sur le toit et appeler au secours.</string>
    <string name="flood_whl_adv3">Utiliser vos bras pour protéger votre tête et votre cou et une
        couverture pour protéger votre corps.</string>
    <string name="flood_whl_adv4">Ne pas marcher, nager ou rouler dans l\'eau.</string>
    <string name="flood_whl_adv5">Ne pas marcher sur des ponts au-dessus de courants d\'eau.</string>
    <string name="flood_whl_adv6">Ne pas essayer d\'aller plus vite qu\'une inondations.
    </string>
    <string name="flood_whl_adv7">Si possible, continuer à suivre les informations.</string>
    <string name="flood_aft_section_title">Après : Rester en sécurité et se rétablir</string>
    <string name="flood_aft_adv1">Continuer à suivre les informations.</string>
    <string name="flood_aft_adv2">Porter des gants et des bottes. Présence d\'animaux ou d\'objets
        coupants dans l\'eau.</string>
    <string name="flood_aft_adv3">Vous protéger pendant le processus de nettoyage.</string>
    <string name="flood_aft_adv4">Ne pas toucher les équipements électriques.</string>
    <string name="flood_aft_adv5">N\'appeler que les services de secours. Contacter les autres
        personnes par SMS ou internet.</string>
    <string name="flood_aft_adv6">Prendre des photos des dégats.</string>
    <string name="flood_info_website">https://www.ready.gov/floods</string>
</resources>