<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_prepare"
            android:icon="@drawable/ic_menu_prepare_black_24dp"
            android:title="@string/menu_prepare" />
        <item
            android:id="@+id/nav_evacuate"
            android:icon="@drawable/ic_menu_evacuate_black_24dp"
            android:title="@string/menu_evacuate" />
        <item
            android:id="@+id/nav_refuges"
            android:icon="@drawable/ic_menu_refuges_black_24dp"
            android:title="@string/menu_refuges" />
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_menu_donate_black_24dp"
            android:title="@string/menu_donate" />
    </group>

    <item android:title="@string/menu_settings">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_profile_black_24dp"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_language"
                android:icon="@drawable/ic_menu_language"
                android:title="@string/menu_language" />
        </menu>
    </item>

</menu>
