<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="patti.philippe.read_i.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_prepare"
            app:destination="@id/nav_prepare" />
        <action
            android:id="@+id/action_nav_home_to_fragment_hurricane"
            app:destination="@id/fragment_hurricane" />
        <action
            android:id="@+id/action_nav_home_to_fragment_flood"
            app:destination="@id/fragment_flood" />
        <action
            android:id="@+id/action_nav_home_to_fragment_extreme_heat"
            app:destination="@id/fragment_extreme_heat" />
    </fragment>

    <fragment
        android:id="@+id/nav_prepare"
        android:name="patti.philippe.read_i.ui.prepare.PrepareMenuFragment"
        android:label="@string/menu_prepare"
        tools:layout="@layout/fragment_prepare_menu" >
        <action
            android:id="@+id/action_nav_prepare_to_hurricaneFragment"
            app:destination="@id/fragment_hurricane" />
        <action
            android:id="@+id/action_nav_prepare_to_fragment_extreme_heat"
            app:destination="@id/fragment_extreme_heat" />
        <action
            android:id="@+id/action_nav_prepare_to_fragment_flood"
            app:destination="@id/fragment_flood" />
    </fragment>

    <fragment
        android:id="@+id/fragment_hurricane"
        android:name="patti.philippe.read_i.ui.prepare.HurricaneFragment"
        android:label="@string/hurr_title"
        tools:layout="@layout/fragment_hurricane" />

    <fragment
        android:id="@+id/fragment_extreme_heat"
        android:name="patti.philippe.read_i.ui.prepare.ExtremeHeatFragment"
        android:label="@string/heat_title"
        tools:layout="@layout/fragment_extreme_heat" />

    <fragment
        android:id="@+id/fragment_flood"
        android:name="patti.philippe.read_i.ui.prepare.FloodFragment"
        android:label="@string/flood_title"
        tools:layout="@layout/fragment_flood" />

</navigation>